--- a/style.css
+++ b/style.css
@@ -16,63 +16,31 @@
     display: inline-block;
 }
 
-[class*="width-"] {
+#id-form .top-form-element {
     float: left;
-    margin: 0;
     white-space: nowrap;
     overflow: hidden;
 }
 
-[class*="width-"].width-100 {
-    width: 100% !important;
-    float: none;
+#id-form .top-form-element:not(:last-child) {
+    /* 4 elements = 10% so far*/
+    margin-right: 2.5%;
 }
 
-.width-5 {
-    width: 5% !important;
+#id-q {
+    /* 30% + 10% = 40% so far */
+    width: 30%;
 }
 
-.width-10 {
-    width: 10% !important;
+#id-form .top-form-button {
+    /* 3 buttons = 30% + 40% = 70% so far */
+    width: 10%;
 }
 
-.width-20 {
-    width: 20% !important;
+#id-found {
+    /* 30% + 70% = 100% so far */
+    width: 30%;
 }
-
-.width-25 {
-    width: 25% !important;
-}
-
-.width-30 {
-    width: 30% !important;
-}
-
-.width-40 {
-    width: 40% !important;
-}
-
-.width-50 {
-    width: 50% !important;
-}
-
-.width-60 {
-    width: 60% !important;
-}
-
-.width-70 {
-    width: 70% !important;
-}
-
-.width-80 {
-    width: 80% !important;
-}
-
-.width-90 {
-    width: 90% !important;
-}
-
-#book_container {}
 
 .book_container_width {
     width: calc(100vw - 20px);
@@ -143,15 +111,18 @@ body {
     font-family: 'Alef', sans-serif;
 }
 
-#flipbook {}
+#flipbook {
+    width: 100%;
+    height: 100%;
+}
 
 #flipbook .page {
     vertical-align: middle;
     background-color: white;
     font-size: 1.2vh;
     text-align: center;
-    width: calc(50vw - 10px);
-    height: calc(100vh - 70px);
+    -width: 50%;
+    -height: calc(100vh - 70px);
     direction: rtl;
 }
 
@@ -221,15 +192,41 @@ body {
 
 
 /* For page numbers on corner of pages uncomment this block:
+.display-single #flipbook .page_number_wrapper,
+#flipbook .even .page_number_wrapper,
+#flipbook .even .page_top_content {
+    text-align: right;
+}
+
+.display-double #flipbook .odd .page_number_wrapper,
+.display-double #flipbook .odd .page_top_content {
+    text-align: left;
+}
+
+#flipbook .page_number_wrapper:hover {
+    opacity: 1;
+}
+
 #flipbook .page_number {
-	width:auto;
-	left:auto;
+    display: inline-block;
+    width: 60px;
+    font-size: 12px;
+    height: 22px;
+    line-height: 22px;
+    padding: 0 10px;
+    background: #999;
+    color: #fff;
 }
-#flipbook .odd .page_number {
-	left:11px;
-}
+
+.display-single #flipbook .page_number,
 #flipbook .even .page_number {
-	right:11px;
+    text-align: left;
+    border-radius: 10px 0 0 10px;
+}
+
+.display-double #flipbook .odd .page_number {
+    text-align: right;
+    border-radius: 0 10px 10px 0;
 }*/
 
 #flipbook .first_content_line,
@@ -247,7 +244,7 @@ body {
     display: inline-block;
     height: 100%;
     padding: 0;
-    transition: width 200ms;
+    transition: width 350ms, margin 350ms;
     z-index: 100;
     background-color: fff;
     background-image: linear-gradient(90deg, #555 50%, #fff 50%);
@@ -257,6 +254,7 @@ body {
 #flipbook_parent {
     margin: 0;
     z-index: 1000;
+    overflow: hidden;
 }
 
 .display-double #book_container {
@@ -310,10 +308,11 @@ body {
     box-shadow: none;
 }
 
-.mobile #flipbook .page_number {
-    background: #fff;
+.rtl #id-form .top-form-element {
+    float: right;
 }
 
-.rtl [class*="width-"] {
-    float: right;
+.rtl #id-form .top-form-element:not(:last-child) {
+    margin-right: 0;
+    margin-left: 2.5%;
 }
